code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_57.wast
(assert_invalid
  (module (func $type-func-value-num-vs-void-after-nested-unreachable
    (block (unreachable)) (i32.const 1)
  ))
  "type mismatch"
)